fixed spacing of body and header, footer position

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -55,8 +55,7 @@ Container
 -------------------------------------------------------------------------------- */
 
 .container {
-  padding: 0px 75px 0px 75px;
-  margin-top: 75px;
+  padding: 25px 75px 0px 75px;
 }
 
 /* --------------------------------------------------------------------------------
