--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -2,9 +2,9 @@
 General
 -------------------------------------------------------------------------------- */
 
-#hero-container {
+/* #hero-container {
   margin-top: 25px;
-}
+} */
 
 .guarantee-inner-bg h2,
 .works-section h2,
